<resources>
    <string name="app_name">CarePayLibrary</string>
    <string name="google_map_api_base_url">https://maps.googleapis.com</string>
    <string name="google_map_api_key">AIzaSyDFrx3OGugrIUQzsoEJVobtQoz6f9MMim</string>
    <string name="Menu">Menu</string>
    <string name="home_logo">Home Logo</string>
    <string name="respons_title">Responsibility</string>
    <string name="respons_total_label">Your total patient responsibility</string>
    <string name="respons_previous_balance_label">Previous balance</string>
    <string name="respons_copay_label">Insurance CoPay</string>
    <string name="respons_pay_label">Pay at practice</string>
    <string name="respons_pay_now_label">Pay now</string>
    <string name="pay_total_amount">PAY TOTAL AMOUNT</string>
    <string name="make_partial_payment">PARTIAL PAYMENT</string>
    <string name="AL">AL</string>
    <string name="FL">FL</string>
    <string name="american_indian">American Indian</string>
    <string name="Asian">Asian</string>
    <string name="african_american">African American</string>
    <string-array name="Race">
        <item>@string/american_indian</item>
        <item>@string/Asian</item>
        <item>@string/african_american</item>
        <item>@string/decline_to_answer</item>
    </string-array>
    <string name="AetnaSelect">Aetna Select</string>
    <string name="AetnaValueNetwork">Aetna Value Network HMO</string>
    <string name="ElectChoice">Elect Choice HMO</string>
    <string name="HMO">HMO</string>
    <string name="Aetna">Aetna</string>
    <string name="Blue">Blue Cross Blue Shield</string>
    <string name="Cigna">Cigna</string>
    <string name="GHI">GHI</string>
    <string name="HIP">HIP</string>
    <string name="English">English</string>
    <string name="Spanish">Spanish</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string-array name="Language">
        <item>@string/English</item>
        <item>@string/Spanish</item>
    </string-array>
    <string-array name="plans">
        <item>@string/AetnaSelect</item>
        <item>@string/AetnaValueNetwork</item>
        <item>@string/ElectChoice</item>
        <item>@string/HMO</item>
    </string-array>
    <string-array name="providers">
        <item>@string/Aetna</item>
        <item>@string/Blue</item>
        <item>@string/Cigna</item>
        <item>@string/GHI</item>
        <item>@string/HIP</item>
    </string-array>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="tertiary">Tertiary</string>
    <string-array name="cardtypes">
        <item>@string/primary</item>
        <item>@string/secondary</item>
        <item>@string/tertiary</item>
    </string-array>
    <string name="hispanic">Hispanic</string>
    <string name="white_americans">White</string>
    <string name="other">Other</string>
    <string name="decline_to_answer">Decline to Answer</string>
    <string-array name="Ethnicity">
        <item>@string/hispanic</item>
        <item>@string/decline_to_answer</item>
    </string-array>
    <string-array name="Gender">
        <item>@string/Male</item>
        <item>@string/Female</item>
        <item>@string/decline_to_answer</item>
    </string-array>
    <string-array name="UpdatesMode">
        <item>Mobile Notifications</item>
        <item>Email Notifications</item>
        <item>Newsletter</item>
        <item>Monthly coupons</item>
        <item>Marketing Material</item>
    </string-array>
    <string name="demogr_docs_logo">Logo</string>
    <string name="demogr_docs_logo_title">Documents, please</string>
    <string name="demogr_docs_logo_message">The scan process is pretty straightforward</string>
    <string name="demogr_docs_scan_insurance_front_label">SCAN FRONT</string>
    <string name="demogr_docs_scan_insurance_backlabel">SCAN BACK</string>
    <string name="demogrDocsNumberHint">Driver\'s License Number</string>
    <string name="demogr_docs_license_number_label">Driver\'s License State</string>
    <string name="demogr_insurance_switch_text">Do you have health insurance?</string>
    <string name="demogr_insurance_provider">Provider</string>
    <string name="demogr_insurance_plan">Plan</string>
    <string name="demogr_insurances_card_type">Type</string>
    <string name="demogr_insurance_number_label">Insurance Card Number</string>
    <string name="demogr_button_label">Next</string>
    <string name="demogr_tv_choose_label">Choose</string>
    <string name="demogr_docs_tv_chose_company">Choose Company First</string>
    <string name="demogr_docs_remove_card">Remove Card</string>
    <string name="AddressHeadingTextView">Let\'s get you set up!</string>
    <string name="AddressSubHeadingTextView">First, tell us your address \u0026 contact information</string>
    <string name="PhoneNumberEditText">Phone Number</string>
    <string name="ZipCodeEditText">Zip Code</string>
    <string name="Address1EditText">Address Line 1</string>
    <string name="Address2EditText">Address Line 2</string>
    <string name="CityEditText">City</string>
    <string name="StateEditText">State</string>
    <string name="driverLicense">Diver\'s License</string>
    <string name="review_insurancecardnumber_hint">Insurance Card Number</string>
    <string name="dobformat">MM/DD/YYYY</string>
    <string name="demofirstNameLabel">First Name</string>
    <string name="demomiddleNameLabel">Middle Name</string>
    <string name="demolastNameLabel">Last Name</string>
    <string name="demoemailLabel">Email</string>
    <string name="demoDobLabel">Date of Birth</string>
    <string name="demoPhoneNumberLabel">Phone Number</string>
    <string name="demodriverlicenseLabel">Driver License</string>
    <string name="demoAddress1Label">Address Line 1</string>
    <string name="demoAddress2Label">Address Line 2</string>
    <string name="demoZipcodeLabel">Zip Code</string>
    <string name="demoCityLabel">City</string>
    <string name="demoStateLabel">State</string>
    <string name="demooptional">Optional</string>
    <string name="detailsHeadingTextView">Some details about you</string>
    <string name="detailsSubHeadingTextView">How about uploading your photo?</string>
    <string name="selectOrTakePhotoButton">SELECT OR TAKE PHOTO</string>
    <string name="changeCurrentPhotoButton">CHANGE CURRENT PHOTO</string>
    <string name="raceLabel">Race</string>
    <string name="ethnicityLabel">Ethnicity</string>
    <string name="languageLabel">Preferred Language</string>
    <string name="chooseTextView">Choose</string>
    <string name="aDD_DEMOGRAPHIC_INFO_Button_Label">ADD DEMOGRAPHIC INFO</string>
    <string name="nO_HAVE_HEALTH_INSURANCE_Button_Label">I DON\'T HAVE HEALTH INSURANCE</string>
    <string name="health_Insurance_Information">Health Insurance Information</string>
    <string name="add_Health_InsuranceInfo">Add Health Insurance Info</string>
    <string name="review_insurance_subHeading">We didn\’t find any insurance info associated with your profile. If you have health insurance, please fill in the fields below.</string>
    <string name="demographics_title">Demographic</string>
    <string name="next_Button">Next</string>
    <string name="invalid_date_of_birth_format">Invalid date</string>
    <string name="additional_info">Additional Information</string>
    <string name="signin_signup_email_hint">Email</string>
    <string name="signin_signup_password_hint">Create Password</string>
    <string name="password_text">Password</string>
    <string name="create_password_text">Create Password</string>
    <string name="submit_button">SIGN IN</string>
    <string name="signup_button">CREATE NEW ACCOUNT</string>
    <string name="language_textview">Change language</string>
    <string name="forgot_password_textview">Forgot password?</string>
    <string name="patientportal">Patient Portal</string>
    <string name="descriptionofportal">Small text describing why the patient may consider signing up for Portal.</string>
    <string name="signupforportal">SIGN UP PORTAL</string>
    <string name="passfornow">I&amp;’LL PASS NOW</string>
    <string name="caps">FIRST NAME</string>
    <string name="firstname_text">First Name</string>
    <string name="middlename_text">Middle Name</string>
    <string name="lastname_text">Last Name</string>
    <string name="repeat_password_text">Repeat Password</string>
    <string name="account_exist_textview">Already have an account?</string>
    <string name="signup_error_empty_first_name">First name is empty</string>
    <string name="signup_error_empty_last_name">Last name is empty</string>
    <string name="signin_signup_error_empty_email">Email is empty</string>
    <string name="signin_signup_error_invalid_email">Email is invalid</string>
    <string name="signin_signup_error_empty_password">Password is empty</string>
    <string name="signin_signup_error_empty_repeat_password">Repeat password is empty</string>
    <string name="signup_error_passwords_unmatched">Passwords do not match</string>
    <string name="signup_error_passwords_invalid">Invalid password</string>
    <string name="PlaceHolderIcon">PlaceHolder Icon</string>
    <string name="moreDetailsHeadingTextView">You\'re all set!</string>
    <string name="moreDetailsSubHeadingTextView">Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis.</string>
    <string name="GoToCarePayButton">Go To CarePay</string>
    <string name="demoVerifyHeading">Demographic Information</string>
    <string name="demoVerifySubHeading">We didn\'t find any demographic info associated with your profile.Please fill in the fields below.</string>
    <string name="apt_day_upcoming">UPCOMING</string>
    <string name="empty_phone_number_error_messae">Enter phone number</string>
    <string name="incorrect_phone_number_error_messae">Enter valid phone number</string>
    <string name="empty_zip_code_error_messae">Enter zip code</string>
    <string name="empty_address_error_messae">Enter address</string>
    <string name="empty_city_error_messae">Enter city</string>
    <string name="minimum_char_in_city_error_messae">Minimum three letters</string>
    <string name="empty_state_error_messae">Enter state</string>
    <string name="select_state_error_messae">The state is invalid</string>
    <string name="add_medical_info">Add More</string>
    <string name="check_in_at_office">CHECK-IN \nAT OFFICE</string>
    <string name="close">Close</string>
    <string name="demogr_next">Next</string>
    <string name="check_in_now">CHECK-IN \nNOW</string>
    <string name="review_screen_healthinsurance">HEALTH INSURANCE</string>
    <string name="review_screen_company_lable">COMPANY</string>
    <string name="review_plan_label">PLAN</string>
    <string name="review_screen_insurancepolicy_number_lable">INSURANCE MEMBER ID</string>
    <string name="pick_date">Pick Date</string>
    <string name="date_range_apply_button_label">Apply</string>
    <string name="sunday_text_view_label">S</string>
    <string name="monday_text_view_label">M</string>
    <string name="tuesday_text_view_label">T</string>
    <string name="wednesday_text_view_label">W</string>
    <string name="thursday_text_view_label">T</string>
    <string name="friday_text_view_label">F</string>
    <string name="saturday_text_view_label">S</string>
    <string name="next">NEXT</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="save_card_on_file">Save Card on File</string>
    <string name="restrict_digits_space">012345 67890</string>
    <string name="content_description_pay_button">Pay Button</string>
    <string name="content_description_credit_cards_list">Credit Cards List</string>
    <string name="content_description_credit_cards_screen">Credit Cards Screen</string>
</resources>