<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carecloud.carepay.patient.payment.fragments.AddNewCreditCardFragment">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_responsibility" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_layout"
        android:padding="@dimen/payment_method_parent_layout_padding"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/creditCardNoTextInputLayout"
            style="@style/PaymentEditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/payment_method_layout_checkbox_margin"
            android:layout_marginRight="@dimen/payment_method_layout_checkbox_margin"
            android:layout_marginTop="@dimen/payment_method_layout_checkbox_margin">

            <EditText
                android:id="@+id/creditCardNoEditText"
                style="@style/PaymentEditTextStyle"
                android:hint="@string/credit_card_number"
                android:inputType="textEmailAddress"
                android:maxLength="19"
                android:digits="@string/restrict_digits_space"/>


        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="1dp"
            android:background="@color/cadet_gray" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/verificationCodeTextInputLayout"
            style="@style/PaymentEditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/payment_method_layout_checkbox_margin"
            android:layout_marginRight="@dimen/payment_method_layout_checkbox_margin"
            android:layout_marginTop="@dimen/payment_method_layout_checkbox_margin">

            <EditText
                android:id="@+id/verificationCodeEditText"
                style="@style/PaymentEditTextStyle"
                android:hint="@string/verification_code"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="@dimen/payment_method_layout_label_margin_top"
            android:layout_marginTop="1dp"
            android:background="@color/cadet_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/payment_method_layout_checkbox_margin">

            <TextView
                android:id="@+id/expirationDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/expiration_date"
                android:textColor="@color/charcoal"
                android:textSize="@dimen/payment_method_layout_label_text_size" />


            <TextView
                android:id="@+id/pickDateTextView"
                style="@style/PaymentPickDateLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/pick_date" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cadet_gray" />

        <CheckBox
            android:id="@+id/saveCardOnFileCheckBox"
            style="@style/PaymentMethodLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/payment_method_layout_checkbox_margin"
            android:background="@null"
            android:button="@null"
            android:drawableRight="@drawable/cell_checkbox"
            android:text="@string/save_card_on_file" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cadet_gray" />

    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        style="@style/PaymentButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/payment_method_parent_layout_padding"
        android:background="@drawable/button_selector"
        android:text="@string/next" />

</RelativeLayout>
